--- a/BlurryBackgroundDemo/Base.lproj/Main.storyboard
+++ b/BlurryBackgroundDemo/Base.lproj/Main.storyboard
@@ -80,7 +80,7 @@
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="hSk-ET-G8m" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Jns-Fd-qnn">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" misplaced="YES" id="Jns-Fd-qnn">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
